tests/invalid/definite/ConstrainedSet_Invalid_1.whiley
define pintset as {int} where |$| > 1

void System::main([string] args):
    pintset p
    p = {1}
    print str(p)
